vlib/v/checker/tests/option_in_receiver_err.vv
struct Foo {
mut:
	name string
}

fn (mut f Foo) t0(arr ?[]int) ?string {
	return arr?.len.str()
}

fn (mut f ?Foo) t1(arr ?[]int) ?string {
	return arr?.len.str()
}